--- a/package.json
+++ b/package.json
@@ -25,10 +25,14 @@
   "dependencies": {
     "@nestjs/common": "^9.1.6",
     "@nestjs/core": "^9.1.6",
+    "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.1.6",
     "@nestjs/swagger": "^6.1.2",
     "convict": "^6.2.3",
     "dotenv": "^16.0.3",
+    "express-session": "^1.17.3",
+    "passport": "^0.6.0",
+    "passport-openidconnect": "^0.1.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
@@ -40,6 +44,7 @@
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
     "@types/express": "^4.17.13",
+    "@types/express-session": "^1.17.5",
     "@types/jest": "27.0.2",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
