--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "@nestjs/platform-express": "^9.1.6",
     "@nestjs/swagger": "^6.1.2",
     "convict": "^6.2.3",
+    "convict-format-with-validator": "^6.2.0",
     "dotenv": "^16.0.3",
     "express-session": "^1.17.3",
+    "openid-client": "^5.2.1",
     "passport": "^0.6.0",
-    "passport-openidconnect": "^0.1.1",
+    "passport-http-bearer": "^1.0.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
