--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.1.6",
     "@nestjs/swagger": "^6.1.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "convict": "^6.2.3",
     "convict-format-with-validator": "^6.2.0",
     "dotenv": "^16.0.3",
