--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@elastic/elasticsearch": "~7.12.0",
     "@nestjs/common": "^9.1.6",
     "@nestjs/core": "^9.1.6",
+    "@nestjs/elasticsearch": "^9.0.0",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.1.6",
     "@nestjs/swagger": "^6.1.2",
