--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "release": "semantic-release"
   },
   "dependencies": {
     "@elastic/elasticsearch": "~7.12.0",
@@ -32,6 +33,7 @@
     "@nestjs/swagger": "^6.1.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "commit-analyzer-fail-on-no-release": "^1.0.1",
     "convict": "^6.2.3",
     "convict-format-with-validator": "^6.2.0",
     "dotenv": "^16.0.3",
@@ -41,7 +43,8 @@
     "passport-http-bearer": "^1.0.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "semantic-release": "^19.0.5"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.1.2",
