--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "openeo-job-tracker-elastic-api",
   "version": "0.0.0",
-  "description": "",
-  "author": "",
-  "private": true,
+  "description": "API to report OpenEO jobs",
+  "author": "VITO",
+  "private": false,
   "license": "UNLICENSED",
   "scripts": {
     "prebuild": "rimraf dist",
