--- a/.github/workflows/build_and_deploy.js.yml
+++ b/.github/workflows/build_and_deploy.js.yml
@@ -9,7 +9,7 @@ on:
   pull_request:
     branches: [ "main" ]
 env:
-  DOKCER_IMAGE_NAME: openeo-job-tracker-elastic-api
+  DOCKER_IMAGE_NAME: openeo-job-tracker-elastic-api
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -42,14 +42,14 @@ jobs:
       - run: npm run release
       - id: version
         run: npm pkg get version | tr -d '"'
-      - name: Login to Docker Hub
+      - name: Login to Docker repository
         uses: docker/login-action@v2
         with:
           registry: ${{ secrets.DOCKER_ARTIFACTORY }}
           username: ${{ secrets.ARTIFACTORY_USERNAME }}
           password: ${{ secrets.ARTIFACTORY_PASSWORD }}
       - name: Build image
-        run: docker build . --tag $DOCKER_IMAGE_NAME
+        run: docker build -t $DOCKER_IMAGE_NAME .
       - name: Tag image
         run: docker tag $DOCKER_IMAGE_NAME ${{ secrets.DOCKER_ARTIFACTORY }}/$DOCKER_IMAGE_NAME:${{steps.version}} ${{ secrets.DOCKER_ARTIFACTORY }}/$DOCKER_IMAGE_NAME:latest
       - name: Push image
