feat(#8): added health endpoint

--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
   },
   "dependencies": {
     "@elastic/elasticsearch": "~7.12.0",
+    "@nestjs/axios": "^1.0.0",
     "@nestjs/common": "^9.1.6",
     "@nestjs/core": "^9.1.6",
     "@nestjs/elasticsearch": "^9.0.0",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.1.6",
     "@nestjs/swagger": "^6.1.2",
+    "@nestjs/terminus": "^9.1.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "commit-analyzer-fail-on-no-release": "^1.0.1",
