--- a/.releaserc.json
+++ b/.releaserc.json
@@ -28,6 +28,8 @@
       {
         "npmPublish": false
       }
-    ]
+    ],
+    "@semantic-release/release-notes-generator",
+    "@semantic-release/github"
   ]
 }
