feat: added github_token to release step

--- a/.github/workflows/build_and_deploy.js.yml
+++ b/.github/workflows/build_and_deploy.js.yml
@@ -40,6 +40,8 @@ jobs:
           cache: 'npm'
       - run: npm install
       - run: npm run release
+        with:
+            github_token: ${{ secrets.GITHUB_TOKEN }}
       - id: version
         run: |
           version=$(npm pkg get version | tr -d '"')
