--- a/.github/workflows/build_and_deploy.js.yml
+++ b/.github/workflows/build_and_deploy.js.yml
@@ -40,7 +40,7 @@ jobs:
           cache: 'npm'
       - run: npm install
       - run: npm run release
-        with:
+        env:
             github_token: ${{ secrets.GITHUB_TOKEN }}
       - id: version
         run: |
