--- a/.github/workflows/build_and_deploy.js.yml
+++ b/.github/workflows/build_and_deploy.js.yml
@@ -28,7 +28,7 @@ jobs:
     - run: npm run test:cov
     - run: npm run build
 
-  deploy:
+  release:
     needs: build
     if: github.event_name != 'pull_request'
     runs-on: ubuntu-latest
@@ -47,6 +47,19 @@ jobs:
         run: |
           version=$(npm pkg get version | tr -d '"')
           echo "DOCKER_VERSION=$version" >> $GITHUB_ENV
+
+  deploy:
+    needs: release
+    if: github.event_name != 'pull_request'
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Use Node.js 18.x
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18.x
+          cache: 'npm'
+      - run: npm install
       - name: Login to Docker repository
         uses: docker/login-action@v2
         with:
