--- a/.github/workflows/build_and_deploy.js.yml
+++ b/.github/workflows/build_and_deploy.js.yml
@@ -46,7 +46,9 @@ jobs:
       - id: version
         run: |
           version=$(npm pkg get version | tr -d '"')
-          echo "DOCKER_VERSION=$version" >> $GITHUB_ENV
+          echo "::set-output name=docker_version::${version}"
+    outputs:
+      docker_version: ${{ steps.version.outputs.docker_version }}
 
   deploy:
     needs: release
@@ -63,13 +65,18 @@ jobs:
       - name: Login to Docker repository
         uses: docker/login-action@v2
         with:
+          timeout_minutes: 5
+          max_attempts: 3
           registry: ${{ secrets.DOCKER_ARTIFACTORY }}
           username: ${{ secrets.ARTIFACTORY_USERNAME }}
           password: ${{ secrets.ARTIFACTORY_PASSWORD }}
       - name: Build image
         run: docker build -t $DOCKER_IMAGE_NAME .
       - name: Tag image
-        run: docker tag $DOCKER_IMAGE_NAME ${{ secrets.DOCKER_ARTIFACTORY }}/$DOCKER_IMAGE_NAME:${{env.DOCKER_VERSION}} && docker tag $DOCKER_IMAGE_NAME  ${{ secrets.DOCKER_ARTIFACTORY }}/$DOCKER_IMAGE_NAME:latest
+        run: docker tag $DOCKER_IMAGE_NAME ${{ secrets.DOCKER_ARTIFACTORY }}/$DOCKER_IMAGE_NAME:${{needs.release.outputs.docker_version}} && docker tag $DOCKER_IMAGE_NAME  ${{ secrets.DOCKER_ARTIFACTORY }}/$DOCKER_IMAGE_NAME:latest
       - name: Push image
-        run: docker push ${{ secrets.DOCKER_ARTIFACTORY }}/$DOCKER_IMAGE_NAME:${{env.DOCKER_VERSION}} && docker push ${{ secrets.DOCKER_ARTIFACTORY }}/$DOCKER_IMAGE_NAME:latest
+        run: docker push ${{ secrets.DOCKER_ARTIFACTORY }}/$DOCKER_IMAGE_NAME:${{needs.release.outputs.docker_version}} && docker push ${{ secrets.DOCKER_ARTIFACTORY }}/$DOCKER_IMAGE_NAME:latest
+        with:
+          timeout_minutes: 5
+          max_attempts: 3
  
