--- a/.github/workflows/build_and_deploy.js.yml
+++ b/.github/workflows/build_and_deploy.js.yml
@@ -46,7 +46,7 @@ jobs:
       - id: version
         run: |
           version=$(npm pkg get version | tr -d '"')
-          echo "::set-output name=docker_version::${version}"
+          echo "docker_version=${version}" >> $GITHUB_OUTPUT
     outputs:
       docker_version: ${{ steps.version.outputs.docker_version }}
 
