--- a/.github/workflows/build_and_deploy.js.yml
+++ b/.github/workflows/build_and_deploy.js.yml
@@ -64,7 +64,7 @@ jobs:
       - name: Update package.json
         id: version
         run: |
-          npm version ${{needs.release.outputs.docker_version}}
+          sed -i .bak -E "s/(\"version\": \").+(\")/\1${{needs.release.outputs.docker_version}}\2/g" package.json
       - run: npm install
       - name: Login to Docker repository
         uses: docker/login-action@v2
