feat(#26): added logging middleware

--- a/package.json
+++ b/package.json
@@ -109,7 +109,8 @@
       ".decorator.ts",
       "main.ts",
       "bearer.",
-      ".mock.ts"
+      ".mock.ts",
+      ".middleware.ts"
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
