test(#35): added tests for existing strategy

--- a/package.json
+++ b/package.json
@@ -109,7 +109,7 @@
       ".enum.ts",
       ".decorator.ts",
       "main.ts",
-      "bearer.",
+      "bearer.guard",
       ".mock.ts",
       ".middleware.ts"
     ],
