--- a/package.json
+++ b/package.json
@@ -40,13 +40,18 @@
     "convict-format-with-validator": "^6.2.0",
     "dotenv": "^16.0.3",
     "express-session": "^1.17.3",
+    "nestjs-pino": "^4.1.0",
     "openid-client": "^5.2.1",
     "passport": "^0.6.0",
     "passport-http-bearer": "^1.0.1",
+    "pino": "^9.1.0",
+    "pino-http": "^10.1.0",
+    "pino-pretty": "^11.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "semantic-release": "^19.0.5"
+    "semantic-release": "^19.0.5",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.1.2",
