--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@elastic/elasticsearch": "~7.12.0",
     "@nestjs/axios": "^1.0.0",
+    "@nestjs/cache-manager": "^2.3.0",
     "@nestjs/common": "^9.1.6",
     "@nestjs/core": "^9.1.6",
     "@nestjs/elasticsearch": "^9.0.0",
@@ -33,6 +34,7 @@
     "@nestjs/platform-express": "^9.1.6",
     "@nestjs/swagger": "^6.1.2",
     "@nestjs/terminus": "^9.1.4",
+    "cache-manager": "^5.7.6",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "commit-analyzer-fail-on-no-release": "^1.0.1",
