--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@nestjs/platform-express": "^9.1.6",
     "@nestjs/swagger": "^6.1.2",
     "@nestjs/terminus": "^9.1.4",
+    "@nestjs/throttler": "^6.2.1",
     "cache-manager": "^5.7.6",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
