--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "prestart": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
+    "start": "nest start | pino-pretty",
+    "start:dev": "nest start --watch | pino-pretty",
+    "start:debug": "nest start --debug --watch | pino-pretty",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
